removed actual credentials

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_API_KEY = "AIzaSyDe_kfnhwn8zWIkAubahzSuUOL_DdR5OLU"
-GROQ_API_KEY="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"
+GOOGLE_API_KEY = "your google api key"
+GROQ_API_KEY="your groq api key"
